# todo-points-backend

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  seed.sql
.github/workflows/: cross_platforms_action.yml  docker_action.yml
docker/local/: Dockerfile
docker/prod/: Dockerfile
migrations/2018-07-05-163612_create_tasks_table/: down.sql  up.sql
migrations/2018-12-06-070116_create_users_table/: up.sql
migrations/2019-02-20-054109_create_login_history_table/: up.sql
migrations/2020-05-12-055817_create_users/: up.sql
migrations/2020-05-16-144707_create_tasks/: up.sql
migrations/2020-06-16-203352_create_todos/: down.sql  up.sql
migrations/2020-06-16-203650_create_labels/: up.sql
migrations/2020-06-17-003644_create_completed/: down.sql  up.sql
migrations/2020-06-17-003650_create_labels/: down.sql  up.sql
migrations/2020-10-20-000117_create_groups_table/: down.sql  up.sql
migrations/2020-10-20-015832_create_points/: down.sql  up.sql
src/: api.rs  auth_handler.rs  db.rs  main.rs  main_old.rs  model.rs  schema.rs  tasks.rs  users_model.rs  utils.rs
src/api/: account_controller.rs  balance_controller.rs  completion_controller.rs  label_controller.rs  mod.rs  task_controller.rs  todo_controller.rs
src/config/: app.rs
src/middleware/: authen_middleware.rs
src/models/: balance.rs  completion.rs  group.rs  label.rs  mod.rs  task.rs  todo.rs  user.rs  user_token.rs
src/services/: account_service.rs  balance_service.rs  completion_service.rs  label_service.rs  mod.rs  task_service.rs  todo_service.rs
src/tasks/: api.rs  db.rs  model.rs
(+4 files in other folders)
