[package]
authors = ["Graham Mackie <graham.mackie@gmail.com>"]
name = "todo-points-backend"
version = "0.0.1"
edition = "2018"

[dependencies]
actix-web = "2.0.0"
actix-files = "0.2.1"
actix-session = "0.3.0"
actix-rt = "1.1.1"
actix-identity = "0.2.1"
argonautica = { git = "https://github.com/bcmyers/argonautica", rev = "67fc8d8d7d67696cd8ca7a59b92531f06b089212" }
chrono = { version = "0.4.11", features = ["serde"] }
derive_more = "0.99.7"
dotenv = "0.15"
env_logger = "0.7"
futures = "0.3.5"
log = "0.4.8"
r2d2 = "0.8"
lazy_static = "1.4.0"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
sparkpost = "0.5.4"
uuid = { version = "0.8", features = ["serde", "v4"] }

[dependencies.diesel]
features = ["postgres", "r2d2", "sqlite", "chrono", "uuidv07"]
version = "1.4.4"
